# wxNewMake

./: .gitignore  CMakeLists.txt
include/: BarGraph.h  BarGraphSet.h  BasicDrawPane.h  main.h  simple.h
src/: BarGraph.cpp  BarGraphSet.cpp  BasicDrawPane.cpp  main.cpp  simple.cpp
